--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       }
      </style>
      
-    <title> Blog React App</title>
+    <title> FitFreak Fitness App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
